--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@
   --color-primary: #616553;
   --color-primary-light: #A8AD97;
   --color-secondary: #666;
+  --color-secondary-light: #fff;
   --color-accent: #D3C6AB;
   --color-neutral-beige: #EFE3CB;
   --color-neutral-dark: #A39886;
