--- a/css/theme.css
+++ b/css/theme.css
@@ -18,3 +18,61 @@ html {
 h1, h2, h3, h4, h5, h6 {
   color: #616553;
 }
+
+ul, ol, dl {
+  list-style: none;
+}
+
+blockquote, cite, q, em, i, dfn {
+  font-style: italic;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+input:focus {
+  border-color: var(--color-primary-light);
+}
+
+select:focus {
+  border-color: var(--color-primary-light);
+}
+
+input {
+  border-color: var(--color-accent);
+}
+
+select {
+  border-color: var(--color-accent);
+}
+
+.error-message {
+  display: block;
+  background-color: #fee;
+  color: #c33;
+  border-color: #f33;
+}
+
+.product-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  width: 30%;
+}
+
+.product-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.product-container {
+  padding: 2px 16px;
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.btn {
+  text-align: center;
+}
