--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -2,7 +2,6 @@
   background-color: var(--color-neutral-dark);
   border-color: var(--color-neutral-beige);
   color: var(--color-secondary-light);
-  text-align: center;
 }
 
 .btn:hover {
@@ -22,5 +21,11 @@
 .btn-light {
   background-color: var(--color-primary);
   border-color: var(--color-primary-light);
+  color: var(--color-secondary-light);
+}
+
+.btn-2 {
+  background-color: var(--color-neutral-dark);
+  border-color: var(--color-neutral-beige);
   color: var(--color-secondary-light);
 }
