Adds more sections

--- a/css/theme.css
+++ b/css/theme.css
@@ -47,6 +47,11 @@ select {
   border-color: var(--color-accent);
 }
 
+a {
+  text-decoration: none;
+  color: var(--color-primary);
+}
+
 #name {
   width: 40%;
 }
@@ -205,4 +210,33 @@ img {
   margin-right: 1em;
   margin-left: 0;
   color: var(--color-secondary-light);
+}
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: var(--color-primary-light);
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: var(--color-secondary-light);
+  display: block;
+}
+
+.sidenav a:hover {
+  color: var(--color-secondary);
+}
+
+.main {
+  margin-left: 160px;
+  padding: 0px 10px;
 }
