--- a/css/theme.css
+++ b/css/theme.css
@@ -221,6 +221,10 @@ select {
   color: var(--color-neutral-dark);
 }
 
+.footer {
+  background-color: var(--color-secondary-light);
+}
+
 .footer-list a i{
   text-align: center;
 }
@@ -229,15 +233,15 @@ select {
   color: var(--color-neutral-dark);
 }
 
-.section {
+.section-banner {
   background-color: var(--color-accent);
 }
 
-.section h2 {
+.section-banner h2 {
   color: var(--color-secondary-light);
 }
 
-.section p {
+.section-banner p {
   color: var(--color-secondary);
 }
 
