Centered contents in surounding div

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,7 +1,17 @@
 ---
 layout: default
 ---
+<div class="grid">
+  <div class="unit island pad-t-2 push-1-2 max-length">
 
-<h1>{{page.name}}</h1>
-<p>{{page.description}}</p>
-<img src="{{page.image}}" alt="">
+    <div class="">
+      <h1 class="push-1-2">{{page.name}}</h1>
+      <p>{{page.description}}</p>
+    </div>
+
+    <div>
+      <img src="{{page.image}}" class="img-flex max-length" alt="">
+    </div>
+
+  </div>
+</div>
