--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -4,7 +4,7 @@ layout: default
 <div class="grid">
   <div class="unit island pad-t-2 push-1-2 max-length">
 
-    <div class="">
+    <div>
       <h1 class="push-1-2">{{page.name}}</h1>
       <p>{{page.description}}</p>
     </div>
