--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="grid">
+<div class="grid section-card">
   <div class="unit island pad-t-2 push-1-2 max-length">
 
     <div>
