--- a/css/theme.css
+++ b/css/theme.css
@@ -13,7 +13,6 @@
 
 html {
   font-family: var(--font-primary);
-  background-color: #f0f0f0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -198,6 +197,10 @@ a {
 
 .subnav-content a:hover {
   border-bottom: 2px solid var(--color-primary-light);
+}
+
+.section-card {
+  background-color: #f0f0f0;
 }
 
 @media only screen and (min-width: 60em) {
