Changed the fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <title>greengardens</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="/css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i" rel="stylesheet">
 </head>
 <body>
 
