--- a/css/theme.css
+++ b/css/theme.css
@@ -7,8 +7,7 @@
   --color-neutral-beige: #EFE3CB;
   --color-neutral-dark: #A39886;
 
-  --font-primary: "Playfair Display", serif;
-  --font-secondary: "Cabin", sans-serif;
+  --font-primary: "Raleway", sans-serif;
 }
 
 html {
@@ -17,11 +16,11 @@ html {
 
 h1, h2, h3, h4, h5, h6 {
   color: #616553;
-  font-family: "Cabin", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 p {
-  font-family: "Playfair Display", serif;
+  font-family: "Raleway", sans-serif;
 }
 
 ul, ol, dl {
