--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="/css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i" rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="icon" type="image/png" href="favicon-196.png">
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 
