--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,7 +1,7 @@
-.btn {
-  background-color: var(--color-neutral-beige);
-  border-color: var(--color-neutral-beige);
-  color: var(--color-secondary);
+.basic-btn {
+  background-color: transparent;
+  border-color: var(--color-main-button);
+  color: var(--color-main-button);
   border-radius: 0;
 }
 
@@ -13,6 +13,7 @@
 .btn-ghost {
   background-color: transparent;
   color: var(--color-secondary-light);
+  border-color: var(--color-secondary-light);
   border-radius: 0;
 }
 
@@ -21,10 +22,10 @@
 }
 
 .btn-light {
-  background-color: var(--color-primary-light);
-  border-color: var(--color-primary-light);
+  background-color: var(--color-main-button);
+  border-color: var(--color-main-button);
   border-radius: 0;
-  color: var(--color-secondary);
+  color: var(--color-secondary-light);
   display: inline-block;
   width: 100%;
   text-align: center;
