Fixing more styles

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -3,19 +3,15 @@ layout: default
 ---
 <div class="grid section-card">
   <div class="unit island pad-t-2 push-1-2 max-length">
-
     <div>
       <h1 class="push-1-2">{{page.name}}</h1>
       <p>{{page.description}}</p>
     </div>
-
     <div class="push">
       <img src="{{page.image}}" class="img-flex max-length" alt="">
     </div>
-
     <div class="unit-content-center-horizontal">
-      {% pattern buttons/basic text="Purchase" url="/products/" %}
+      {% pattern buttons/basic text="Purchase" url="/checkout" %}
     </div>
-
   </div>
 </div>
