--- a/_patterns/newsletter/newsletter.css
+++ b/_patterns/newsletter/newsletter.css
@@ -16,3 +16,50 @@
 body {
   background-color: var(--color-primary);
 }
+
+.table-heading {
+  background-color: var(--color-main-button);
+  color: var(--color-secondary-light);
+}
+
+.price-shadow {
+  background-color: var(--color-hover);
+  box-shadow: 0 15px 15px rgba(128, 128, 128, .3);
+}
+
+.price-table td,
+.price-table th {
+  border: none;
+}
+
+.price-table caption {
+  color: var(--color-secondary);
+}
+
+td .icon {
+  color: var(--color-secondary-light);
+}
+
+tr {
+  color: var(--color-secondary-light);
+}
+
+.price-card {
+  background-color: var(--color-primary-light);
+}
+
+.price-card h3 {
+  color: var(--color-accent);
+}
+
+.signup-card {
+  background-color: var(--color-main-button);
+}
+
+.signup-card h2 {
+  color: var(--color-secondary-light);
+}
+
+.signup-card input {
+  border-color: var(--color-main-button);
+}
