--- a/css/theme.css
+++ b/css/theme.css
@@ -5,7 +5,7 @@
   --color-secondary-light: #fff;
   --color-accent: #d08158;
   --color-main-button: #355f57;
-  --color-hover: #899B92;
+  --color-price-card: #899B92;
 
   --font-primary: "Raleway", sans-serif;
 }
